fdo#44211 (RTF) return default text encoding for Lithuanian